--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-radio-group": "^1.3.6",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
